--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,23 +4,29 @@
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Roastly"
-        tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
+        android:theme="@style/Theme.Roastly">
+
+        <!-- Set LoginActivity as the launcher activity -->
+        <activity android:name=".ui.login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- RegisterActivity -->
+        <activity android:name=".ui.login.RegisterActivity"
+            android:exported="true" />
+
+        <!-- MainActivity -->
+        <activity android:name=".MainActivity"
+            android:exported="true" />
     </application>
+
 
 </manifest>
