Alterado nome atividade principal home, adicionado factory para login view model, adicionado class para fragmento de adicionar atividade, feito shared preferences para manter user  logado

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,13 @@
         <!-- MainActivity -->
         <activity android:name=".MainActivity"
             android:exported="true" />
+
+        <!-- HomeActivity -->
+        <activity android:name=".ui.common.HomeActivity"
+            android:exported="true" />
+
     </application>
+
 
 
 </manifest>
