--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,24 +9,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Roastly">
-
+        <activity
+            android:name=".EditProfileActivity"
+            android:exported="false" />
         <!-- Set LoginActivity as the launcher activity -->
-        <activity android:name=".ui.login.LoginActivity"
+        <activity
+            android:name=".ui.login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- RegisterActivity -->
-        <activity android:name=".ui.login.RegisterActivity"
-            android:exported="true" />
-
-        <!-- MainActivity -->
-        <activity android:name=".MainActivity"
+        </activity> <!-- RegisterActivity -->
+        <activity
+            android:name=".ui.login.RegisterActivity"
+            android:exported="true" /> <!-- MainActivity -->
+        <activity
+            android:name=".MainActivity"
             android:exported="true" />
     </application>
-
 
 </manifest>
