--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,30 +10,29 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Roastly">
         <activity
+            android:name=".ProfilesActivity"
+            android:exported="false" />
+        <activity
             android:name=".EditProfileActivity"
-            android:exported="true" />
-        <!-- Set LoginActivity as the launcher activity -->
-        <activity android:name=".ui.login.LoginActivity"
+            android:exported="true" /> <!-- Set LoginActivity as the launcher activity -->
+        <activity
+            android:name=".ui.login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- HomeActivity -->
-        <activity android:name=".ui.common.HomeActivity"
+        </activity> <!-- HomeActivity -->
+        <activity
+            android:name=".ui.common.HomeActivity"
+            android:exported="true" /> <!-- RegisterActivity -->
+        <activity
+            android:name=".ui.login.RegisterActivity"
+            android:exported="true" /> <!-- MainActivity -->
+        <activity
+            android:name=".MainActivity"
             android:exported="true" />
-
-        <!-- RegisterActivity -->
-        <activity android:name=".ui.login.RegisterActivity"
-            android:exported="true" />
-
-        <!-- MainActivity -->
-        <activity android:name=".MainActivity"
-            android:exported="true" />
-
     </application>
-
 
 </manifest>
