--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,29 +13,29 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Roastly">
         <activity
+            android:name=".ProfilesActivity"
+            android:exported="false" />
+        <activity
             android:name=".EditProfileActivity"
-            android:exported="true" />
-        <!-- Set LoginActivity as the launcher activity -->
-        <activity android:name=".ui.login.LoginActivity"
+            android:exported="true" /> <!-- Set LoginActivity as the launcher activity -->
+        <activity
+            android:name=".ui.login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- HomeActivity -->
-        <activity android:name=".ui.common.HomeActivity"
-            android:exported="true" />
-
-        <!-- RegisterActivity -->
-        <activity android:name=".ui.login.RegisterActivity"
-            android:exported="true" />
-
-        <!-- MainActivity -->
-        <activity android:name=".MainActivity"
+        </activity> <!-- HomeActivity -->
+        <activity
+            android:name=".ui.common.HomeActivity"
+            android:exported="true" /> <!-- RegisterActivity -->
+        <activity
+            android:name=".ui.login.RegisterActivity"
+            android:exported="true" /> <!-- MainActivity -->
+        <activity
+            android:name=".MainActivity"
             android:exported="true" />
     </application>
-
 
 </manifest>
